# ML-OPS-FINAL-24

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  manuel_requirements.txt  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_docker.txt  requirements_docker_gpu.txt  requirements_docker_train.txt  trainer.dockerfile  velvety-tube-410716-d872dd76f593.json
.dvc/: .gitignore  config
.github/workflows/: docker-image.yml  python-app.yml
conf/: config.yaml
dockerfiles/: docker_train.sh  predict_model.dockerfile  train_model.dockerfile  train_model_gpu.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
fastapi/: Dockerfile  main.py  requirements_fastapi.txt
fastapi/app/: main.py
fastapi/app/templates/: base.html  index.html  upload.html
model/: all_results.json
outputs/2024-01-11/11-16-53/.hydra/: hydra.yaml
outputs/2024-01-11/11-20-08/.hydra/: hydra.yaml
outputs/2024-01-11/12-00-10/.hydra/: hydra.yaml
outputs/2024-01-11/12-01-11/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-11/12-28-31/.hydra/: hydra.yaml
outputs/2024-01-11/12-29-08/.hydra/: hydra.yaml
outputs/2024-01-11/12-30-23/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-11/12-31-16/.hydra/: hydra.yaml
outputs/2024-01-11/12-34-05/.hydra/: hydra.yaml
outputs/2024-01-11/12-35-06/.hydra/: hydra.yaml
outputs/2024-01-11/12-44-45/.hydra/: hydra.yaml
outputs/2024-01-11/12-54-10/.hydra/: hydra.yaml
outputs/2024-01-11/13-15-31/.hydra/: hydra.yaml
outputs/2024-01-11/13-21-11/.hydra/: hydra.yaml
outputs/2024-01-11/13-46-11/.hydra/: hydra.yaml
outputs/2024-01-11/13-46-51/.hydra/: hydra.yaml
outputs/2024-01-11/13-49-28/.hydra/: hydra.yaml
project/: __init__.py  models.dvc  predict_model.py  train_model.py
project/data/: make_dataset.py
project/models/: model.py  trained_models.dvc
reports/: README.md
tests/: t_test.py  train_model_test.py
tests/data/: data_test.py
wandb/run-20240109_224030-3a0mb99a/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20240110_130314-6435p1e9/: run-6435p1e9.wandb
wandb/run-20240110_130314-6435p1e9/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+24 files in other folders)
