[build-system]
requires = ["setuptools>=40.9.0", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
description = "Final project in the ML Ops course @DTU"
authors = [
  { name = "Johan B.H.", email = "your@email.com" },
  { name = "Andreas Holme.", email = "your@email.com" },
  { name = "Klaus Bentzen", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
# You'll need to list your dependencies and optional-dependencies here

[tool.setuptools_scm]
# Configure setuptools_scm, for example, to use git tags as version
write_to = "version.py"
fallback_version = "0.0.1"

[tool.ruff]
line-length = 120
select = ["I"]
