[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_OPS_Project"
version = "0.0.1"
description = "Final project in the ML Ops course @DTU"
authors = [
  { name = "Johan B.H.", email = "your@email.com" },
  { name = "Andreas Holme.", email = "your@email.com" },
  { name = "Klaus Bentzen", email = "your@email.com" }
]

readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["ML_OPS_Project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]
